--- a/sample_config.ini
+++ b/sample_config.ini
@@ -1,14 +1,14 @@
 [kigconfig]
 log = True
-APP_ID = https://my.telegram.org
-API_HASH = https://my.telegram.org
-TOKEN = https://t.me/BotFather
-OWNER_ID = 895373440
-OWNER_USERNAME = dank_as_fuck
-SQLALCHEMY_DATABASE_URI = postgres db url
-MESSAGE_DUMP = -1001451724150
-GBAN_LOGS = -1001451724150
-SYS_ADMIN =
+APP_ID = 21927988
+API_HASH = e18f720acdff1e5b0ec80616aecd8a5a
+TOKEN = 5881951624:AAGB-qFVydN7UEuym8bxpSm9_CWYzgUG-NI
+OWNER_ID = 2064735436
+OWNER_USERNAME = plumblossomsword
+SQLALCHEMY_DATABASE_URI = postgresql://plumblossomsword:YOHMSYTKcjYLaqioWlyCDRrJZSkSmvQ3@dpg-cevf5782i3mntl1sh6q0-a.frankfurt-postgres.render.com/telegram_postgresql
+MESSAGE_DUMP = -1001859171071
+GBAN_LOGS = -1001859171071
+SYS_ADMIN = 2064735436
 LOAD =
 NO_LOAD = sed
 WEBHOOK = False
@@ -19,14 +19,14 @@ CERT_PATH = None
 PORT = 5000
 DEL_CMDS = True
 STRICT_GBAN = True
-BAN_STICKER =
+BAN_STICKER = CAACAgUAAx0CbtCy_wACAqtjueps9nyaEwtytxzU-aLfwe1bEwACtwgAAlIl0VT9IuTRAoPKPi0E
 ALLOW_EXCL = True
 CUSTOM_CMD = False
-CASH_API_KEY = https://www.alphavantage.co/support/#api-key
-TIME_API_KEY = https://timezonedb.com/api
-WALL_API = https://wall.alphacoders.com/api.php
-spamwatch_api = https://t.me/SpamWatchBot
+CASH_API_KEY = 6HZ09C7DZYKWBCCE
+TIME_API_KEY = 4ID9HHBVU5L8
+WALL_API = 
+spamwatch_api = zKSTO8g_x3qmaMrU_tiTRXibTb532qbmTKXYW3RdyW8Pq0qk1oEtqddo7HqxRp~1
 SPAMMERS =
-LASTFM_API_KEY = https://www.last.fm/api/account/create
+LASTFM_API_KEY = 9d73c8bfc43204b8087a8d4cb8f6dcb6
 BOT_API_URL = https://api.telegram.org/bot
 BOT_API_FILE_URL = https://api.telegram.org/file/bot
